# thinker

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  README_EH.md  README_EN.md  requirements.txt  setup.py
.github/workflows/: docker-image.yml  docker-publish.yml  linux_x86.yml  linux_x86_googel.yml  main.yml  publish-docker-image.yml  test.yml
cmake/: arch.cmake  config.cmake  directory.cmake  files.cmake  ops.cmake  utils.cmake
demo/resnet28/: resnet18-12-regular.onnx
demo/resnet50/: resnet50_fashion_mnist.onnx
demo/test_dynamic/: CMakeLists.txt  test_dynamic.c
demo/test_thinker/: CMakeLists.txt  test_thinker.c
docs/: op_thinker.md  support_quant_ops.md  thinker_auto_test.md  thinker_build.md  thinker_compile.md  thinker_environment.md  thinker_packer.md  thinker_performance.md  thinker_profile.md  thinker_run.md  thinker_validator.md
executor/: CMakeLists.txt  Makefile
executor/c_api/: thinker_api.c  thinker_api.h  thinker_crc.h  thinker_debug.h  thinker_define.h
executor/core/: operator_attrs.h  operator_init.h  operator_list.h  operator_register.c  operator_register.h  operator_template.h
executor/core/comm/: thinker_log.h  utils.c  utils.h
executor/core/ops/: argmax.c  avgpool2dint.c  batchnormint.c  bmmint.c  cast.c  clip.c  concat.c  conv1dInt.c  conv2dInt.c  convtranspose2dint.c  dequant.c  expand.c  ffnint.c  flatten.c  gather.c  gluInt.c  gruint.c  iqadd.c  iqdiv.c  iqmul.c  iqpad.c  iqsigmoid.c  iqsub.c  iqsum.c  iqtanh.c  iqvar.c  layernormint.c  linearint.c  logsoftmax.c  logsoftmaxint.c  lstmint.c  maxpool.c  multiheadattentionint.c  prelu.c  quant.c  relu.c  relux.c  requant.c  reshape.c  resize.c  (+12 more)
executor/core/ops/arcs/: argmax.h  avgpool2dint.h  batchnormint.h  bmmint.h  concat.h  conv1dint.h  conv2dint.h  deconv2dint.h  ffnint.h  flatten.h  gather.h  gluint.h  gruint.h  iqadd.h  iqdiv.h  iqmul.h  iqpad.h  iqsigmoid.h  iqsub.h  iqsum.h  iqtanh.h  iqvar.h  layernormint.h  linearint.h  logsoftmaxint.h  lstmint.h  maxpool.h  multiheadattentionint.h  prelu.h  relu.h  requant.h  reshape.h  shufflechannel.h  slice.h  softmaxint.h  sparifyffnint.h  split.h  tile.h  topn.h  topn2.h  (+1 more)
executor/core/ops/arcs/luna/: luna.h  luna_basic_math.h  luna_cnn_math.h  luna_cnn_tools.h  luna_complex_math.h  luna_math.h  luna_math_types.h  luna_matrix_math.h  luna_misc_math.h  luna_statistics_math.h  luna_transform_math.h  opi_psram_cpy.h
executor/core/ops/arcs/nnblas/: lunaext.h  lunaext_ffn.h  lunaext_ffn_trans_dec.h  lunaext_lstm.h
executor/core/ops/venus/: argmax.h  avgpool2dint.h  batchnormint.h  bmmint.h  concat.h  conv1dint.h  conv2dint.h  deconv2dint.h  flatten.h  gather.h  gluint.h  gruint.h  iqadd.h  iqdiv.h  iqmul.h  iqpad.h  iqsigmoid.h  iqsub.h  iqsum.h  iqtanh.h  iqvar.h  layernormint.h  linearint.h  logsoftmax.h  logsoftmaxint.h  lstmint.h  maxpool.h  prelu.h  relu.h  requant.h  reshape.h  shufflechannel.h  slice.h  softmaxint.h  split.h  tile.h  topn.h  topn2.h  transpose.h
executor/core/ops/venus/hifi/: NatureDSP_types.h
executor/core/ops/venus/luna/: luna_filter_math.h  opi_psram_cpy.h
executor/core/ops/venus/nnblas/: luna_math_types.h  nlang_runtime.h  nnblas_basic_math.h  nnblas_cnn_math.h  nnblas_complex_math.h  nnblas_div.h  nnblas_matrix_math.h  nnblas_misc_math.h  nnblas_op.h
executor/core/ops/venusA/: argmax.h  avgpool2dint.h  batchnormint.h  bmmint.h  concat.h  conv1dint.h  conv2dint.h  deconv2dint.h  flatten.h  gather.h  gluint.h  gruint.h  iqadd.h  iqdiv.h  iqmul.h  iqpad.h  iqsigmoid.h  iqsub.h  iqsum.h  iqtanh.h  iqvar.h  layernormint.h  linearint.h  logsoftmaxint.h  lstmint.h  maxpool.h  prelu.h  relu.h  relux.h  requant.h  reshape.h  slice.h  softmaxint.h  split.h  tile.h  topn.h  topn2.h  transpose.h
executor/core/ops/venusA/luna/: luna.h  luna_basic_math.h  luna_cnn_math.h  luna_cnn_tools.h  luna_complex_math.h  luna_error.h  luna_math_types.h  luna_matrix_math.h  luna_misc_math.h  luna_mtq_math.h  luna_scheduler_math.h  luna_transform_math.h
executor/core/ops/venusA/luna/cmd/: luna_cnn_cmd.h  luna_excute_cmd.h  luna_fft_cmd.h  luna_filter_cmd.h  luna_matrix_cmd.h  luna_misc_cmd.h  luna_vector_cmd.h
executor/core/ops/venusA/luna/include/: cache.h
executor/core/shape_infer/: scalar_op.c  scalar_op.h  shape_infer.c  shape_infer.h
executor/include/nnblas/: lunaext.h  lunaext_attention.h  lunaext_ffn.h  lunaext_ffn_trans_dec.h
executor/include/thinker/: libthinker.dynsym  thinker.h  thinker_status.h  thinker_type.h
executor/libs/venus/win32/: hifi.lib
executor/libs/venus/win64/: hifi.lib
scripts/: x86_linux.sh  x86_win.bat
test/: auto_test.sh
test/include/: catch.hpp  common.h
test/linux_x86/: CMakeLists.txt  test_x86.cpp
thinker/: Dockerfile  __init__.py  combine.py  enum_defines.py  generate_report.py  graph_serialize.py  load_model.py  save_model.py  tpacker.py
thinker/docs/: ReadMe.txt  linger.md  thinker_auto_test.md  thinker_build.md  thinker_docker.md  thinker_environment.md  thinker_packer.md  thinker_run.md  thinker_technical_highlights.md
thinker/graph/: Graph.py  GraphEntry.py  GraphEntryExt.py  GraphNode.py  Tensor.py  __init__.py  indexed.py
thinker/graph_optimizer/: __init__.py  graph_optimizer.py  layout_convert.py  op_divide.py  op_fusion.py  op_replace.py  op_split.py
thinker/resource_packer/: __init__.py  memory.py  venus.py
thinker/thinker/executor/: CMakeLists.txt
thinker/thinker/executor/c_api/: thinker_api.h  thinker_debug.h  thinker_define.h  thinker_memory.h
thinker/thinker/executor/core/: operator_register.h
thinker/thinker/executor/core/comm/: utils.c
thinker/thinker/executor/core/ops/: avgpool2dint.c  concat.c  conv1dInt.c  dequant.c  flatten.c  gruint.c  iqadd.c  iqdiv.c  logsoftmaxint.c  maxpool.c  quant.c  relu.c  resize.c  softmaxint.c  split.c  squeeze.c
thinker/thinker/executor/include/thinker/: thinker_status.h  thinker_type.h
tools/: MANIFEST.in  image_preprocess.py  install.sh  setup.py
tools/thinker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+320 files in other folders)
