CMAKE_MINIMUM_REQUIRED( VERSION 2.8 FATAL_ERROR )
ADD_EXECTION(test_thinker ${CMAKE_CURRENT_SOURCE_DIR} ${ROOT_BIN_DIR})
set(BEGIN_WHOLE_ARCHIVE -Wl,--whole-archive)
set(END_WHOLE_ARCHIVE -Wl,--no-whole-archive)

set(CPP_EXAMPLE_LIBS ${BEGIN_WHOLE_ARCHIVE} thinker m ${END_WHOLE_ARCHIVE})

TARGET_LINK_LIBRARIES(test_thinker ${CPP_EXAMPLE_LIBS})
